# python-bindiff

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
bindiff/: __init__.py  bindiff.py  file.py  types.py
src/bindiff/: __init__.py  __main__.py  bindiff.py  file.py  types.py  workspace.py
